@@ -12,109 +12,115 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.*;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.crypto.password.PasswordEncoder;
 
 import java.time.LocalDateTime;
-import java.util.*;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
 
-import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
 class UserServiceTest {
 
-    @Mock private UserRepository userRepository;
-    @Mock private PasswordEncoder passwordEncoder;
-    @Mock private JwtTokenProvider jwtTokenProvider;
-    @Mock private SecurityContext securityContext;
+    @Mock
+    private UserRepository userRepository;
 
-    @InjectMocks private UserService userService;
+    @Mock
+    private PasswordEncoder passwordEncoder;
 
-    private User user;
+    @Mock
+    private JwtTokenProvider jwtTokenProvider;
+
+    @InjectMocks
+    private UserService userService;
+
+    @Mock
+    private SecurityContext securityContext;
+
     private UserRegistrationDTO registrationDTO;
+    private User user;
     private UserLoginDTO loginDTO;
+    private UserUpdateDTO updateDTO;
 
     @BeforeEach
     void setUp() {
-        // Common test user
+        registrationDTO = new UserRegistrationDTO(
+                "test@example.com",
+                "password123",
+                "Test User",
+                "1234567890",
+                UserRole.CLIENT,
+                null
+        );
+
         user = new User();
         user.setId(1L);
         user.setEmail("test@example.com");
         user.setPassword("encodedPassword");
         user.setFullName("Test User");
         user.setPhone("1234567890");
-        user.setRole(UserRole.FREELANCER);
+        user.setRole(UserRole.CLIENT);
         user.setIsActive(true);
         user.setCreatedAt(LocalDateTime.now());
         user.setUpdatedAt(LocalDateTime.now());
 
-        registrationDTO = new UserRegistrationDTO(
-                "test@example.com",
-                "password123",
-                "Test User",
-                "1234567890",
-                UserRole.FREELANCER,
-                null
-        );
-
         loginDTO = new UserLoginDTO("test@example.com", "password123");
-
-        // Setup security context for current user
-        SecurityContextHolder.setContext(securityContext);
-        when(securityContext.getAuthentication()).thenReturn(() -> 1L);
+        updateDTO = new UserUpdateDTO("Updated User", "0987654321", null);
     }
 
-    // ------------------------- REGISTER USER -------------------------
     @Test
-    void shouldRegisterUser_whenEmailIsUnique() {
+    void shouldRegisterUserSuccessfully() {
         when(userRepository.existsByEmail(registrationDTO.getEmail())).thenReturn(false);
         when(passwordEncoder.encode(registrationDTO.getPassword())).thenReturn("encodedPassword");
         when(userRepository.save(any(User.class))).thenReturn(user);
 
-        UserResponseDTO response = userService.registerUser(registrationDTO);
+        var response = userService.registerUser(registrationDTO);
 
         assertNotNull(response);
-        assertEquals(user.getId(), response.getId());
         assertEquals(user.getEmail(), response.getEmail());
-        verify(userRepository, times(1)).save(any(User.class));
+        verify(userRepository).existsByEmail(registrationDTO.getEmail());
+        verify(userRepository).save(any(User.class));
     }
 
     @Test
-    void shouldThrowException_whenEmailAlreadyExists() {
+    void shouldThrowExceptionWhenRegisteringDuplicateEmail() {
         when(userRepository.existsByEmail(registrationDTO.getEmail())).thenReturn(true);
 
-        assertThrows(DuplicateResourceException.class, () -> userService.registerUser(registrationDTO));
+        assertThrows(DuplicateResourceException.class,
+                () -> userService.registerUser(registrationDTO));
+
+        verify(userRepository).existsByEmail(registrationDTO.getEmail());
         verify(userRepository, never()).save(any(User.class));
     }
 
-    // ------------------------- LOGIN USER -------------------------
     @Test
-    void shouldLoginUser_whenCredentialsAreValid() {
+    void shouldLoginUserSuccessfully() {
         when(userRepository.findByEmail(loginDTO.getEmail())).thenReturn(Optional.of(user));
         when(passwordEncoder.matches(loginDTO.getPassword(), user.getPassword())).thenReturn(true);
         when(jwtTokenProvider.generateToken(user.getEmail(), user.getId(), user.getRole().name()))
-                .thenReturn("token123");
+                .thenReturn("jwt-token");
 
-        LoginResponseDTO response = userService.loginUser(loginDTO);
+        var response = userService.loginUser(loginDTO);
 
         assertNotNull(response);
-        assertEquals("token123", response.getAccessToken());
-        assertEquals("Bearer", response.getTokenType());
-        assertEquals(user.getId(), response.getUser().getId());
+        assertEquals("jwt-token", response.getAccessToken());
+        assertEquals(user.getEmail(), response.getUser().getEmail());
     }
 
     @Test
-    void shouldThrowUnauthorized_whenUserNotFound() {
+    void shouldThrowUnauthorizedIfUserNotFoundOnLogin() {
         when(userRepository.findByEmail(loginDTO.getEmail())).thenReturn(Optional.empty());
 
         assertThrows(UnauthorizedException.class, () -> userService.loginUser(loginDTO));
     }
 
     @Test
-    void shouldThrowUnauthorized_whenPasswordInvalid() {
+    void shouldThrowUnauthorizedIfPasswordDoesNotMatch() {
         when(userRepository.findByEmail(loginDTO.getEmail())).thenReturn(Optional.of(user));
         when(passwordEncoder.matches(loginDTO.getPassword(), user.getPassword())).thenReturn(false);
 
@@ -122,94 +128,105 @@ class UserServiceTest {
     }
 
     @Test
-    void shouldThrowUnauthorized_whenUserInactive() {
+    void shouldThrowUnauthorizedIfUserInactive() {
         user.setIsActive(false);
         when(userRepository.findByEmail(loginDTO.getEmail())).thenReturn(Optional.of(user));
 
         assertThrows(UnauthorizedException.class, () -> userService.loginUser(loginDTO));
     }
 
-    // ------------------------- GET CURRENT USER PROFILE -------------------------
     @Test
-    void shouldReturnCurrentUserProfile_whenUserExists() {
+    void shouldGetCurrentUserProfileSuccessfully() {
+        setAuthenticatedUserId(1L);
         when(userRepository.findById(1L)).thenReturn(Optional.of(user));
 
-        UserResponseDTO response = userService.getCurrentUserProfile();
+        var response = userService.getCurrentUserProfile();
 
-        assertNotNull(response);
         assertEquals(user.getEmail(), response.getEmail());
     }
 
     @Test
-    void shouldThrowUserNotFound_whenCurrentUserDoesNotExist() {
+    void shouldThrowUserNotFoundWhenGettingCurrentUserProfile() {
+        setAuthenticatedUserId(1L);
         when(userRepository.findById(1L)).thenReturn(Optional.empty());
 
         assertThrows(UserNotFoundException.class, () -> userService.getCurrentUserProfile());
     }
 
-    // ------------------------- UPDATE CURRENT USER PROFILE -------------------------
     @Test
-    void shouldUpdateCurrentUserProfile_whenDataProvided() {
-        UserUpdateDTO updateDTO = new UserUpdateDTO("Updated Name", "9999999999", null);
+    void shouldUpdateCurrentUserProfileSuccessfully() {
+        setAuthenticatedUserId(1L);
         when(userRepository.findById(1L)).thenReturn(Optional.of(user));
         when(userRepository.save(user)).thenReturn(user);
 
-        UserResponseDTO response = userService.updateCurrentUserProfile(updateDTO);
+        var response = userService.updateCurrentUserProfile(updateDTO);
 
-        assertEquals("Updated Name", response.getFullName());
-        assertEquals("9999999999", response.getPhone());
+        assertEquals(updateDTO.getFullName(), response.getFullName());
+        assertEquals(updateDTO.getPhone(), response.getPhone());
     }
 
     @Test
-    void shouldThrowUserNotFound_whenUpdateFails() {
-        UserUpdateDTO updateDTO = new UserUpdateDTO("Updated Name", null, null);
+    void shouldThrowUserNotFoundWhenUpdatingProfile() {
+        setAuthenticatedUserId(1L);
         when(userRepository.findById(1L)).thenReturn(Optional.empty());
 
         assertThrows(UserNotFoundException.class, () -> userService.updateCurrentUserProfile(updateDTO));
     }
 
-    // ------------------------- GET USER BY ID -------------------------
     @Test
-    void shouldReturnUser_whenExistsById() {
+    void shouldGetUserByIdSuccessfully() {
         when(userRepository.findById(1L)).thenReturn(Optional.of(user));
 
-        UserResponseDTO response = userService.getUserById(1L);
+        var response = userService.getUserById(1L);
 
-        assertEquals(user.getId(), response.getId());
+        assertEquals(user.getEmail(), response.getEmail());
     }
 
     @Test
-    void shouldThrowUserNotFound_whenUserDoesNotExistById() {
+    void shouldThrowUserNotFoundWhenGettingById() {
         when(userRepository.findById(1L)).thenReturn(Optional.empty());
 
         assertThrows(UserNotFoundException.class, () -> userService.getUserById(1L));
     }
 
-    // ------------------------- GET ALL USERS -------------------------
     @Test
-    void shouldReturnAllUsers() {
-        when(userRepository.findAll()).thenReturn(List.of(user));
+    void shouldGetAllUsersSuccessfully() {
+        when(userRepository.findAll()).thenReturn(Arrays.asList(user));
 
         List<UserResponseDTO> users = userService.getAllUsers();
 
-        assertThat(users).hasSize(1);
-        assertEquals(user.getId(), users.get(0).getId());
+        assertEquals(1, users.size());
+        assertEquals(user.getEmail(), users.get(0).getEmail());
     }
 
-    // ------------------------- DELETE USER -------------------------
     @Test
-    void shouldDeleteUser_whenExists() {
+    void shouldDeleteUserSuccessfully() {
         when(userRepository.findById(1L)).thenReturn(Optional.of(user));
         doNothing().when(userRepository).delete(user);
 
         assertDoesNotThrow(() -> userService.deleteUser(1L));
-        verify(userRepository, times(1)).delete(user);
+        verify(userRepository).delete(user);
     }
 
     @Test
-    void shouldThrowUserNotFound_whenDeleteFails() {
+    void shouldThrowUserNotFoundWhenDeleting() {
         when(userRepository.findById(1L)).thenReturn(Optional.empty());
 
         assertThrows(UserNotFoundException.class, () -> userService.deleteUser(1L));
+    }
+
+    @Test
+    void shouldThrowUnauthorizedIfCurrentUserNotAuthenticated() {
+        SecurityContextHolder.clearContext();
+
+        assertThrows(UnauthorizedException.class,
+                () -> userService.getCurrentUserProfile());
+    }
+
+    private void setAuthenticatedUserId(Long userId) {
+        var auth = mock(org.springframework.security.core.Authentication.class);
+        when(auth.getPrincipal()).thenReturn(userId);
+        SecurityContextHolder.setContext(securityContext);
+        when(securityContext.getAuthentication()).thenReturn(auth);
     }
 }
